--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,15 +18,32 @@
 <md-tab-group>
   <md-tab label="Posts">
     <div>
-          <ul class="items">
-              <li *ngFor="let post of posts">
-                  <span>{{post.body}}</span>
-              </li>
-          </ul>
+      <md-card class="post_card" *ngFor="let post of posts">
+        <md-card-header>
+          <md-card-title>{{post.title}}</md-card-title>
+        </md-card-header>
+        <md-card-content>
+          <p>{{post.body}}</p>
+        </md-card-content>
+      </md-card>
       </div>
   </md-tab>
   <md-tab label="Population">
   </md-tab>
-  <md-tab label="Contacts">
+  <md-tab label="Users">
+    <md-list>
+      <h3 md-subheader>Current users</h3>
+      <md-list-item class="userItem" *ngFor="let user of users">
+        <img md-list-avatar src="http://placehold.it/150/771796" alt="no image">
+        <h2 md-line>{{user.name}}</h2>
+        <p md-line> {{user.phone}} </p>
+        <p md-line> {{user.company.name}} </p>
+        <button md-raised-button color="accent" (click)="loadMore(user.id)" >
+          load more
+        </button>
+      </md-list-item>
+      <h3 md-subheader>Notes</h3>
+    </md-list>
+      <md-divider></md-divider>
   </md-tab>
 </md-tab-group>
